src/index.css
@import "react-alice-carousel/lib/alice-carousel.css";

* {
  scroll-behavior: smooth;
}

.header {
  width: 100%;
  cursor: pointer;
  position: fixed;
  display: flex;
  justify-content: center;
  text-transform: uppercase;
  background-color: #101820ff;
  font-family: "Montserrat", sans-serif;
  font-size: 5vw;
  padding-bottom: 15px;
  box-shadow: 0px 1px 5px black;
  color: white;
  z-index: 100;
}

@media (max-width: 1000px) {
  .header {
    padding-top: 15px;
    font-size: 6.2vw;
  }
}

.app {
  background-color: #101820ff;
  color: white;
  padding-top: 130px;
  padding-bottom: 70px;
}

@media (max-width: 700px) {
  .app {
    padding-top: 80px;
  }
}

.media {
  display: flex;
  flex-direction: column;
  width: 200px;
  min-height: 420px;
  padding: 5px;
  margin: 5px 0;
  border: 1px solid black;
  color: #fee715ff;
  background-color: #101820ff;
  border-radius: 10px;
  position: relative;
  font-family: "Montserrat", sans-serif;
}

.media:hover {
  background-color: rgb(72, 84, 104);
  color: black;
}

@media (max-width: 550px) {
  .media {
    width: 46%;
  }
}

.poster {
  border-radius: 10px;
}

.title {
  width: 100%;
  text-align: center;
  font-size: 17px;
  padding: 8px 0;
}

.subTitle {
  display: flex;
  justify-content: space-between;
  padding-bottom: 3px;
  padding: 0 2px;
  padding-bottom: 3px;
}

.trending {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.pagesTitle {
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  font-size: 2vw;
  padding: 4px;
  border-radius: 50px;
  color: white;
}

@media (max-width: 1000px) {
  .pagesTitle {
    font-size: 6.4vw;
  }
}

/* Frame */

html,
body {
  min-height: 100%;
}

#root {
  min-height: 100vh;
}
.app {
  min-height: 100vh !important;
}
.cont {
  min-height: 100%;
}

.frame {
  min-height: 75vh;
}

